# Chess

./: CMakeLists.txt  readme.txt
backend/: main.cpp
backend/logic/: Board.cpp  Board.h  Game.cpp  Game.h  Move.h  MoveValidator.cpp  MoveValidator.h  Piece.h
backend/logic/pieces/: Bishop.h  King.h  Knight.h  Pawn.h  Piece.h  Queen.h  Rook.h
frontend/: board.js  index.html
